deployments/FrontendService/FrontendService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-server
    version: v1
  name: frontend-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-server
      version: v1
  template:
    metadata:
      labels:
        app: frontend-server
        version: v1
    spec:
      containers:
        - image: frontend-server:latest
          name: frontend-server
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
