deployments/FrontendService/FrontendService/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-server
  name: frontend-server
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend-server
  sessionAffinity: None
  type: ClusterIP
